Changes with APR 0.9.2

  *) Fix a broken check for a failure to read from the random device file.
     PR 12615  [tenthumbs@cybernex.net]

  *) Print informative link errors on Darwin.  [Justin Erenkrantz]

Changes with APR 0.9.1

  *) Fixed usage of alloca in apr_poll() on Tru64
     [Dave Hill <ddhill@zk3.dec.com>]

  *) Running "make check" in the toplevel directory or the test/ directory
     will build and run all test programs.  [Aaron Bannert]

  *) Add apr_array_pop().  [Justin Erenkrantz]

  *) Fixed the native SPARC v8plus version of apr_atomic_dec
     to match the semantics of the default C version [Brian Pane]

Changes with APR 0.9.0

  *) If the length argument to apr_snprintf is 0, then we should return the
     length that the string would be if we actually were going to fill it out.
     However, if the length argument is 0, we can also accept a NULL string.
     Also, added a test case for this.  [Ryan Bloom]

  *) Printing a string with apr_snprintf can seg fault, if a precision is
     specified for the string, and the string being printed doesn't have a
     trailing '\0'.  Fix that seg fault by not calling strlen if a precision
     is specified when printing a string.  Also add a test to the test suite
     for this case.
     [R Samuel Klatchko <rsk@brightmail.com>]

  *) handle leak related to threads on Windows2000/XP 
     [INOUE Seiichiro <inoue@ariel-networks.com>]

  *) Includes moved to INCLUDEDIR/apr-{major} (e.g. /usr/include/apr-0)
     [Greg Stein]

  *) libtool versioning is used to give the library sonames a real
     value. The libraries will be libapr-{major}.so.0.{minor}.{patch}
     [Greg Stein]

  *) Fix apr_tokenize_to_argv() to remove the escape character
     (backslash) from the argument tokens. PR 11793 [Paul J. Reder]

  *) Add APR_PARSE_ARGUMENTS and APR_LAYOUT macros for better layout
     support. [Thom May]

  *) Add parallel-apr layout which utilizes the major version number in